# Sherpa

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  RUN_FULL_TEST_FLOW.ps1  RUN_WINDOWS.md  docker-compose.yml  fix_plan.md  improvement_plan.md  opencode.json  setup-env.sh  test_log_parser.js  test_progress_regex.html
.github/: pull_request_template.md
.github/workflows/: deploy-dev.yml  deploy-prod.yml  k8s-build-deploy.yml  pr-deploy-check.yml  pr-review.yml  test.yml
_tmp/: opencode-test-config.json
docker/: Dockerfile.frontend  Dockerfile.fuzz  Dockerfile.fuzz-cpp  Dockerfile.fuzz-java  Dockerfile.gateway  Dockerfile.opencode  Dockerfile.web  requirements.web.txt
docker/nginx/: entrypoint.sh  sherpa.conf
docs/: API_REFERENCE.md  CODEBASE_TECHNICAL_ANALYSIS.md  COMPETITION_TECHNICAL_BRIEF.md  DOCKER_TO_K8S_HANDOFF.md  K8S_MIGRATION_CHECKLIST.md  PROJECT_HANDOFF_STATUS.md  PROJECT_TECHNICAL_REPORT_ZH.md  PROMEFUZZ_MCP_TECHNICAL_SPEC.md  README.md  STANDARD_CHANGE_PROCESS.md  TECHNICAL_DEEP_DIVE.md  sherpa-code-flow.html
docs/diagrams/: architecture.mmd  components.mmd  flow.mmd  structure.mmd
docs/k8s/: CLOUDFLARE_TUNNEL.md  DEPLOY.md  DEPLOYMENT_DETAILED.md  DEPLOY_ISSUES_NON_NETWORK.md  E2E_ZLIB_REPORT.md  LOCAL_K8S_QUICKSTART.md  MAPPING.md  ORIGINAL_K8S_CLUSTER_DEPLOYMENT.md  RELEASE_GATE.md  RUNBOOK.md
frontend-local-sync-app/: README 2.md  README.md  index.html
frontend-local-sync-app/src/: App.tsx
frontend-next/: tsconfig.tsbuildinfo
frontend-next/app/: layout.tsx  page.tsx
frontend-next/components/: ConfigPanel.tsx  SystemOverviewCard.tsx  TaskProgressPanel.tsx
harness_generator/: README.md  setup-env.sh
harness_generator/docs/: TECHNICAL_HANDOFF_ZH.md  opencode_stability_plan.md
harness_generator/src/: codex_helper.py  fuzz_unharnessed_repo.py  harness_generator.py  test.py
k8s/: README.md
k8s/base/: configmap.yaml  deepseek-secret.example.yaml  frontend-deployment.yaml  frontend-service.yaml  gateway-configmap.yaml  gateway-deployment.yaml  gateway-service.yaml  ingress.yaml  kustomization.yaml  llm-secret.example.yaml  minimax-secret.example.yaml  namespace.yaml  openrouter-embedding-secret.example.yaml  postgres-secret.example.yaml  postgres-statefulset.yaml  pvc-shared.yaml  serviceaccount-rbac.yaml  web-deployment.yaml  web-service.yaml
promefuzz-mcp/: DEPLOY.md  README.md  config.toml  pyproject.toml
promefuzz-mcp/processor/cxx/: CMakeLists.txt
promefuzz-mcp/promefuzz_mcp/: build.py  config.py  server.py  (+1 more)
tests/: test_api_stability.py  test_codex_helper_build.py  test_codex_helper_sentinel.py  test_cors_headers.py  test_dockerize_path_translation.py  test_env_rebuild_dispatch.py  test_execution_plan_quality_contracts.py  test_fuzz_effectiveness_summary.py  test_job_store_persistence.py  test_k8s_job_worker.py  test_k8s_manifest.py  test_k8s_node_pinning.py  test_non_root_static_contracts.py  test_opencode_skill_contracts.py  test_opencode_stability_guards.py  test_persistent_config_runtime_paths.py  test_promefuzz_mcp_semantic.py  test_prompt_template_loading.py  test_run_cmd_streaming.py  test_seed_target_quality.py  test_workflow_antlr_context.py  test_workflow_build_resilience.py  test_workflow_context_store.py  test_workflow_field_forwarding_contract.py  test_workflow_run_detection.py  test_workflow_stage_skill_binding.py
(+90 files in other folders)
